logs/collective.zipfiletransport.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/Extensions'...
Compiling './lib/python3.5/site-packages/collective/zipfiletransport/__init__.py'...
***   File "./lib/python3.5/site-packages/collective/zipfiletransport/__init__.py", line 85
    print 'Customization policy for ZipFileTransport installed'
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/collective/zipfiletransport/browser'...
Compiling './lib/python3.5/site-packages/collective/zipfiletransport/browser/zipexport.py'...
***   File "./lib/python3.5/site-packages/collective/zipfiletransport/browser/zipexport.py", line 132
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/zipfiletransport/i18n'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/af'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/af/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ar'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ar/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/bn'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/bn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ca'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/de'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/en'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/es'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/fr'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/hi'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/hi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/hu'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/it'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ja'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ko'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ne'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ne/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/nl'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/pt'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/pt-br'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/pt-br/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ru'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/tr'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/vi'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/vi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/zh'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/zh-cn'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/zh-cn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/zh-hk'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/zh-hk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/zh-tw'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/locales/zh-tw/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/profiles'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/profiles/default'...
Compiling './lib/python3.5/site-packages/collective/zipfiletransport/schemas.py'...
***   File "./lib/python3.5/site-packages/collective/zipfiletransport/schemas.py", line 35
    except BadZipfile, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/zipfiletransport/skins'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/skins/ZipFileTransport'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/tests'...
Listing './lib/python3.5/site-packages/collective/zipfiletransport/utilities'...
Compiling './lib/python3.5/site-packages/collective/zipfiletransport/utilities/utils.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (utils.py, line 132)
Listing './lib/python3.5/site-packages/collective.zipfiletransport-3.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
